fix to alignment of btns

--- a/style.css
+++ b/style.css
@@ -365,9 +365,8 @@ p b {
 .inner-flex {
   display: flex;
   justify-content: center;
-  /* flex-direction: column; */
-  height: 100%;
-  margin: 30px;
+  align-items: center;
+  height: 55vh;
 }
 
 @media screen and (max-width: 1000px) {
